--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Formulaire de Connexion</title>
-</head>
-<body>
-    <h1>Formulaire de Connexion</h1>
-    <form method="POST" action="/login">
-        <div>
-            <label for="username">Nom d'utilisateur:</label>
-            <input type="text" id="username" name="username" required>
+{% extends 'base_form.html' %}
+
+{% block base_form %}
+<div class="container-fluid">
+  <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh">
+    <div class="col-5">
+      <div class="bg-secondary rounded p-5 p-sm-5 my-4 mx-1">
+        <div class="d-flex align-items-center justify-content-between mb-3">
+          <a href="index.html" class="">
+            <h3 class="text-primary">
+              <i class="fa fa-user-edit me-2"></i>GestionC
+            </h3>
+          </a>
+          <h3></h3>
         </div>
-        <div>
-            <label for="password">Mot de passe:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div>
-            <input type="submit" value="Se connecter">
-        </div>
-    </form>
-</body>
-</html>
+
+        <form action="login" method="post">
+          <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="floatingUsername" placeholder="JohnDoe" name="username" />
+            <label for="floatingUsername">Nom d'utilisateur</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Mot de passe" name="password" />
+            <label for="floatingPassword">Mot de passe</label>
+          </div>
+          <button type="submit" class="btn btn-primary py-3 w-100 mb-4">
+            Se connecter
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
