fini avec l'inscription

--- a/templates/base_form.html
+++ b/templates/base_form.html
@@ -47,7 +47,7 @@
 
   <body>
     <div class="container-fluid position-relative d-flex p-0">
-      <button type="button" class="btn ms-5 btn-square btn-primary m-2"><i class="fa fa-home"></i></button>
+      <button type="button" href="index.html" class="btn ms-5 btn-square btn-primary m-2"><i class="fa fa-home"></i></button>
       {% block base_form %}
     
     {% endblock %}
