--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
     <div class="col-5">
       <div class="bg-secondary rounded p-5 p-sm-5 my-4 mx-1">
         <div class="d-flex align-items-center justify-content-between mb-3">
-          <a href="index.html" class="">
+          <a href="#" class="">
             <h3 class="text-primary">
               <i class="fa fa-user-edit me-2"></i>GestionC
             </h3>
@@ -14,21 +14,23 @@
           <h3></h3>
         </div>
 
-        <form action="login" method="post">
+        <form action="/register" method="post">
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingUsername" placeholder="JohnDoe" name="username" />
+            <input type="text" class="form-control" id="floatingUsername" placeholder="Nom d'utilisateur" name="username" required>
             <label for="floatingUsername">Nom d'utilisateur</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Mot de passe" name="password" />
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Mot de passe" name="password" required>
             <label for="floatingPassword">Mot de passe</label>
           </div>
-          <button type="submit" class="btn btn-primary py-3 w-100 mb-4">
-            Se connecter
-          </button>
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingEmail" placeholder="adresse@example.com" name="email" required>
+            <label for="floatingEmail">Adresse email</label>
+          </div>
+          <button type="submit" class="btn btn-primary py-3 w-100 mb-4">S'inscrire</button>
         </form>
         
-        <p class="text-center">Vous n'avez pas de compte ? <a href="/register">S'inscrire</a></p>
+        <p class="text-center">Déjà inscrit ? <a href="/login">Se connecter</a></p>
       </div>
     </div>
   </div>
