--- a/templates/base.html
+++ b/templates/base.html
@@ -72,12 +72,7 @@
           </a>
           <div class="d-flex align-items-center ms-4 mb-4">
             <div class="position-relative">
-              <img
-                class="rounded-circle"
-                src="img/user.jpg"
-                alt=""
-                style="width: 40px; height: 40px"
-              />
+             
               <div
                 class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"
               ></div>
@@ -90,10 +85,11 @@
             </div>
           </div>
           <div class="navbar-nav w-100">
-            <a href="{{ url_for('index') }}" class="nav-item nav-link active"
-              ><i class="fa fa-tachometer-alt me-2"></i>Tout le contacts</a
-            >
+            <a href="{{ url_for('index') }}" class="nav-item nav-link active">
+              <i class="fa fa-tachometer-alt me-2"></i>Tout le contacts
+              </a>
           </div>
+         
         </nav>
       </div>
       <!-- Sidebar End -->
